--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "json-server": "^0.17.0",
     "npm": "^8.1.1",
     "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "tiny-slider": "^2.9.4"
   }
 }
