--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
+    "ansi-regex": "^6.0.1",
     "sha3": "^2.1.4",
     "tiny-slider": "^2.9.4"
   }
